# terrarium

./: .gitignore  CMakeLists.txt  README.md  flake.nix
constants/: lcd_constants.h  tempsensor_constants.h
include/: lcd_constants.h  lcd_driver.h  tempsensor_constants.h
src/: CMakeLists.txt  lcd_driver.c  main.c
src/lcd_driver/: CMakeLists.txt  lcd_constants.h  lcd_driver.c  lcd_driver.h
src/tempsensor_driver/: CMakeLists.txt  tempsensor_constants.h  tempsensor_driver.c  tempsensor_driver.h
src/wireless_driver/: CMakeLists.txt  lwipopts.h  wireless_driver.c  wireless_driver.h
